--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,11 @@ jobs:
           ..\build\${{ matrix.build_type }}\c3c.exe compile --lib raylib5 --print-linking examples\raylib\raylib_snake.c3
           ..\build\${{ matrix.build_type }}\c3c.exe compile --lib raylib5 --print-linking examples\raylib\raylib_tetris.c3
 
+      - name: run regression test
+        run: |
+          cd resources
+          ..\build\${{ matrix.build_type }}\c3c.exe compile-run reg.c3
+
       - name: run compiler tests
         run: |
           cd test
